<resources>
    <string name="app_name">BubbleMeet</string>
    <!-- Strings related to login -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">login</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Don\'t have an account?\nClick here to register</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="logo">logo</string>
    <string name="password">password</string>
    <string name="passwords_not_same">Passwords are not the same</string>
    <string name="email">email</string>
    <string name="enterEmail">Enter your E-mail</string>
    <string name="enterYourNamePlease">Enter your name, please</string>
    <string name="eye_color">Eye color</string>
    <string name="likes">Likes</string>
    <string name="location">Location</string>
    <string name="login">login</string>
    <string name="forPlay">For play</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="gender">Gender</string>
    <string name="gray">Gray</string>
    <string name="green">Green</string>
    <string name="hazel">Hazel</string>
    <string name="height">Height</string>
    <string name="dontHaveAccount">Don\'t have an account? \nClick here to register</string>
    <string name="logo_img">logo image</string>
    <string name="find_btn">find_btn</string>
    <string name="main_menu_logo">main_menu_logo</string>
    <string name="matches">Matches</string>
    <string name="watchers">Watchers</string>
    <string name="inbox">Inbox</string>
    <string name="main_menu_line">main menu line</string>
    <string name="main_menu_btn">Main menu</string>
    <string name="later">Later</string>
    <string name="two_days">2 days ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="search_people">Search people</string>
    <string name="username">Username</string>
    <string name="fake_data">22, UK</string>
    <string name="fake_bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate doloribus enim ex fugiat id labore quis quod tempora velit vitae? Doloremque dolores enim explicabo maiores officia quam quisquam, reiciendis tenetur.</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="age">Age</string>
    <string name="smoking">Smoking</string>
    <string name="married">Married</string>
    <string name="children">Children</string>
    <string name="looking">Looking for</string>
    <string name="cook">Love to cook</string>
    <string name="user_not_exist">This user not exist or wrong password</string>
    <string name="city">City N</string>
    <string name="button_like">like button</string>
    <string name="button_message">message button</string>
    <string name="year_city">20, City N</string>
    <string name="preview_profile_background">background profile preview</string>
    <string name="addPhoto">Add photo</string>
    <string name="your_gender">Your gender</string>
    <string name="howOld">How old are you</string>
    <string name="createPassword">Create your password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="congratulation">Congratulation</string>
    <string name="yourProfileWasCreated">Your profile was created.</string>
    <string name="couldYouAdd">Could you add all description about you?</string>
    <string name="addMore">Add more</string>
    <string name="yourHeight">Your height</string>
    <string name="cooking">Cooking?</string>
    <string name="lookingFor">Looking for</string>
    <string name="hobbies">Hobbies?</string>
    <string name="youHaveSuccessfullyRegistered">You have successfully registered</string>
    <string name="thanks">Thank\'s</string>
    <string name="next">Next</string>
    <string name="first_message">First message</string>
    <string name="text">Message text</string>
    <string name="send_message">Enter your message</string>
    <string name="select_photo">Select photo</string>
    <string name="match">Match!</string>
    <string name="fitofan">Fitofan media inc.</string>
    <string name="profile_bubbles">profile_bubbles</string>
</resources>
