<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".ui.filter.FilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/btn_close_filter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_back"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/back"
                android:onClick="useNavigate"/>

            <ImageView
                android:id="@+id/btn_set_filter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_search"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/search"
                android:onClick="useNavigate"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp"/>
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp" />
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/age_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp" />
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/location_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eye_color"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp"/>
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/eye_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp"/>
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/height_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoking"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp"/>
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/smoking_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/married"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp"/>
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/married_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp"/>
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/children_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/looking"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp"/>
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/looking_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cook"
            style="@style/AppStyle"
            android:layout_marginBottom="5dp" />
        <com.perevodchik.bubblemeet.custom.FlowRadio
            android:id="@+id/cook_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

    </LinearLayout>

</ScrollView>