<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.mainmenu.MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="65dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.mainmenu.MainActivity"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="fill_horizontal"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/toggle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/find_btn"
            android:src="@drawable/filter_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_menu_logo"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:contentDescription="@string/main_menu_logo"
            android:src="@drawable/bubble_logo_main_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/main_menu_user_avatar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/toggle"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/main_menu_user_avatar"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/preview_profile_avatar_background"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <View
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/black"
            android:contentDescription="@string/main_menu_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/menu_item" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,UseCompoundDrawables">

            <ImageView
                android:id="@+id/matches_item"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/matches"
                android:src="@drawable/ic_matches_inactive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matches"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="354dp"
                tools:layout_editor_absoluteY="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            tools:ignore="MissingConstraints,UseCompoundDrawables">

            <ImageView
                android:id="@+id/likes_item"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/likes"
                android:src="@drawable/ic_likes_inactive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="354dp"
                tools:layout_editor_absoluteY="16dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/menu_item"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/main_menu_btn"
            android:src="@drawable/main_menu_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
            tools:ignore="MissingConstraints,UseCompoundDrawables">

            <ImageView
                android:id="@+id/watchers_item"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/watchers"
                android:src="@drawable/ic_watchers_inactive"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watchers"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="354dp"
                tools:layout_editor_absoluteY="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints,UseCompoundDrawables">

            <ImageView
                android:id="@+id/inbox_item"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/inbox"
                android:src="@drawable/ic_inbox_inactive"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inbox"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="354dp"
                tools:layout_editor_absoluteY="16dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>